[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/JoluMorsanDev/Cell.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/JoluMorsanDev/Cellparated.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 12.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 14 )

[sub_resource type="Animation" id=3]
resource_name = "Nueva Animación"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Cell1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Cell2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -16, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cellparated_gen"
} ]
}

[node name="Cell" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Cellparated = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.0610865
scale = Vector2( 1, 0.75 )
texture = ExtResource( 1 )

[node name="Cell1" type="Sprite" parent="Sprite"]
scale = Vector2( 1, 1 )

[node name="Sprite3" type="Sprite" parent="Sprite/Cell1"]
position = Vector2( 14, 0.427 )
rotation = 7.45058e-09
scale = Vector2( 1, 1.33333 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="Sprite/Cell1"]
position = Vector2( 14, 0.427 )
rotation = -4.96705e-09
scale = Vector2( 0.75, 1.666 )
texture = ExtResource( 1 )

[node name="Cell2" type="Sprite" parent="Sprite"]
scale = Vector2( 1, 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Cell2"]
position = Vector2( -14, -0.855 )
rotation = 7.45058e-09
scale = Vector2( 1, 1.33333 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="Sprite/Cell2"]
position = Vector2( -14, 0.427 )
rotation = -4.96705e-09
scale = Vector2( 0.75, 1.666 )
texture = ExtResource( 1 )

[node name="Cellpar" type="Sprite" parent="Sprite"]
scale = Vector2( 2.25, 1 )
texture = ExtResource( 1 )

[node name="Cell1pos" type="Position2D" parent="Sprite"]
position = Vector2( 29.944, 2.44194 )
rotation = 0.0813701
scale = Vector2( 1.00145, 1.33225 )

[node name="Cell2pos" type="Position2D" parent="Sprite"]
position = Vector2( -29.944, -2.44194 )
rotation = 0.0813701
scale = Vector2( 1.00145, 1.33225 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -14, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="EnemyHitArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitArea"]
position = Vector2( 14, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyHitArea"]
position = Vector2( -14, 0 )
shape = SubResource( 2 )

[node name="BallHitArea" type="Area2D" parent="."]
scale = Vector2( 1.1, 1.1 )
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallHitArea"]
position = Vector2( 14, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BallHitArea"]
position = Vector2( -14, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Nueva Animación"
"anims/Nueva Animación" = SubResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="EnemyHitArea" to="." method="_on_EnemyHitArea_area_entered"]
[connection signal="body_entered" from="BallHitArea" to="." method="_on_BallHitArea_body_entered"]
